--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,13 +1,21 @@
-<legend>Login Form</legend>
+<div id="login-page">
+ <div class="container-fluid">
+    <div class="row middle">
+      <div class="col-md-6 col-md-push-3">
+        <div class="title">Login Form</div>
 
-<div class="form-group">
-  <label for="username">Username</label>
-  <input type="text" class="form-control" id="username" placeholder="Username" ng-model="user.username">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" class="form-control" id="email" placeholder="Email" ng-model="user.email">
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="user.password">
+        </div>
+
+        <button type="button" ng-click="loginCtrl.login()" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
 </div>
-
-<div class="form-group">
-  <label for="password">Password</label>
-  <input type="password" class="form-control" id="password" placeholder="Password" ng-model="user.password">
-</div>
-
-<button type="button" ng-click="login()" class="btn btn-primary">Submit</button>
